--- a/WEEK2/HT2/HT2.ipynb
+++ b/WEEK2/HT2/HT2.ipynb
@@ -38,18 +38,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "116f9a88",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "from transformers import AutoModelForSequenceClassification, AutoTokenizer, pipeline\n",
+    "from datasets import load_dataset\n",
     "import torch, os\n",
     "\n",
     "MODEL_ID = \"distilbert-base-uncased-finetuned-sst-2-english\"\n",
     "tokenizer = AutoTokenizer.from_pretrained(MODEL_ID)\n",
-    "model = AutoModelForSequenceClassification.from_pretrained(MODEL_ID)\n"
+    "model = AutoModelForSequenceClassification.from_pretrained(MODEL_ID)\n",
+    "\n",
+    "dataset = load_dataset(\"imdb\", split=\"test\", )\n"
    ]
   },
   {
@@ -62,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "e9f7f9f5",
    "metadata": {},
    "outputs": [
@@ -70,7 +73,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Device set to use mps:0\n"
+      "Device set to use cpu\n"
      ]
     },
     {
@@ -85,12 +88,11 @@
       "Prediction: [{'label': 'NEGATIVE', 'score': 0.9998123049736023}]\n",
       "\n",
       "Text: Not bad, but could be better.\n",
-      "Prediction: [{'label': 'NEGATIVE', 'score': 0.8015897870063782}]\n"
+      "Prediction: [{'label': 'NEGATIVE', 'score': 0.8015893697738647}]\n"
      ]
     }
    ],
    "source": [
-    "\n",
     "clf = pipeline(\"sentiment-analysis\", model=model, tokenizer=tokenizer)\n",
     "\n",
     "texts = [\n",
@@ -114,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "faf5be7f",
    "metadata": {},
    "outputs": [
@@ -143,12 +145,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "da26434a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code"
+    "from hw2 import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "fbfd5885-4166-4999-9a14-c49e24e35b31",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Размер квантованной модели: 138.7 MB\n",
+      "Уменьшение размера: 48.2%\n"
+     ]
+    }
+   ],
+   "source": [
+    "quantized_model = quantize_model(model, modules_to_quantize = {nn.Linear})\n",
+    "size_quantized = save_model(quantized_model, \"model_quantized.pt\")\n",
+    "\n",
+    "print(f\"Размер квантованной модели: {size_quantized:.1f} MB\")\n",
+    "print(f\"Уменьшение размера: {(1 - size_quantized/size_fp32)*100:.1f}%\")"
    ]
   },
   {
@@ -161,12 +186,330 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "acb9c1a2",
+   "execution_count": 7,
+   "id": "f8406fcc-8424-4321-8b5c-5f79fd66db92",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluating original model...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Evaluating: 100%|█████████████████████████████████████████████████████| 32/32 [05:03<00:00,  9.47s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Original Model Metrics:\n",
+      "  accuracy: 0.9080\n",
+      "  total_samples: 1000\n",
+      "  correct_predictions: 908\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Evaluating original model...\")\n",
+    "original_metrics = evaluate_model_quality(\n",
+    "    model,\n",
+    "    tokenizer,\n",
+    "    dataset,\n",
+    "    max_samples=1000,\n",
+    "    batch_size=32\n",
+    ")\n",
+    "\n",
+    "print(\"\\nOriginal Model Metrics:\")\n",
+    "for key, value in original_metrics.items():\n",
+    "    if isinstance(value, float):\n",
+    "        print(f\"  {key}: {value:.4f}\")\n",
+    "    else:\n",
+    "        print(f\"  {key}: {value}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "e0af9d83-a14e-444d-bddf-0d58e6f3915c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code"
+    "\n",
+    "def evaluate_model_quality(\n",
+    "    model: nn.Module,\n",
+    "    tokenizer,\n",
+    "    validation_dataset,\n",
+    "    max_samples: int = 1000,\n",
+    "    batch_size: int = 32,\n",
+    "    max_length: int = 512\n",
+    ") -> Dict:\n",
+    "    \"\"\"\n",
+    "    Args:\n",
+    "        model: Model to evaluate\n",
+    "        tokenizer: Tokenizer for the model\n",
+    "        validation_dataset: Dataset with 'text' and 'label' fields\n",
+    "        max_samples: Maximum number of samples to evaluate\n",
+    "        batch_size: Batch size for evaluation\n",
+    "        max_length: Maximum sequence length\n",
+    "    \n",
+    "    Returns:\n",
+    "        Dictionary with accuracy and other metrics\n",
+    "    \"\"\"\n",
+    "    model.eval()\n",
+    "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "    model.to(device)\n",
+    "    \n",
+    "    correct = 0\n",
+    "    total = 0\n",
+    "    all_predictions = []\n",
+    "    all_labels = []\n",
+    "    eval_samples = min(max_samples, len(validation_dataset))\n",
+    "    \n",
+    "    with torch.no_grad():\n",
+    "        for i in tqdm(range(0, eval_samples, batch_size), desc=\"Evaluating\"):\n",
+    "            batch_end = min(i + batch_size, eval_samples)\n",
+    "            batch = validation_dataset[i:batch_end]\n",
+    "            \n",
+    "            inputs = tokenizer(\n",
+    "                batch['text'],\n",
+    "                padding=True,\n",
+    "                truncation=True,\n",
+    "                max_length=max_length,\n",
+    "                return_tensors=\"pt\"\n",
+    "            )\n",
+    "            inputs = {k: v.to(device) for k, v in inputs.items()}\n",
+    "            labels = torch.tensor(batch['label']).to(device)\n",
+    "            \n",
+    "            outputs = model(**inputs)\n",
+    "            predictions = torch.argmax(outputs.logits, dim=-1)\n",
+    "            \n",
+    "            correct += (predictions == labels).sum().item()\n",
+    "            total += labels.size(0)\n",
+    "            \n",
+    "            all_predictions.extend(predictions.cpu().numpy())\n",
+    "            all_labels.extend(labels.cpu().numpy())\n",
+    "    \n",
+    "    accuracy = correct / total\n",
+    "    \n",
+    "    # Calculate additional metrics\n",
+    "    all_predictions = np.array(all_predictions)\n",
+    "    all_labels = np.array(all_labels)\n",
+    "\n",
+    "    print(np.unique(all_labels))\n",
+    "    \n",
+    "    # For binary classification\n",
+    "    if len(np.unique(all_labels)) == 2:\n",
+    "        true_positives = np.sum((all_predictions == 1) & (all_labels == 1))\n",
+    "        false_positives = np.sum((all_predictions == 1) & (all_labels == 0))\n",
+    "        false_negatives = np.sum((all_predictions == 0) & (all_labels == 1))\n",
+    "        \n",
+    "        precision = true_positives / (true_positives + false_positives) if (true_positives + false_positives) > 0 else 0\n",
+    "        recall = true_positives / (true_positives + false_negatives) if (true_positives + false_negatives) > 0 else 0\n",
+    "        f1_score = 2 * (precision * recall) / (precision + recall) if (precision + recall) > 0 else 0\n",
+    "    else:\n",
+    "        precision = recall = f1_score = None\n",
+    "    \n",
+    "    metrics = {\n",
+    "        'accuracy': accuracy,\n",
+    "        'total_samples': total,\n",
+    "        'correct_predictions': correct\n",
+    "    }\n",
+    "    \n",
+    "    if precision is not None:\n",
+    "        metrics.update({\n",
+    "            'precision': precision,\n",
+    "            'recall': recall,\n",
+    "            'f1_score': f1_score\n",
+    "        })\n",
+    "    \n",
+    "    return metrics\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "cc78efa5-71c0-4a40-8576-85331c36562d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluating original model...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Evaluating: 100%|███████████████████████████████████████████████████████| 2/2 [00:11<00:00,  5.71s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\n",
+      "\n",
+      "Original Model Metrics:\n",
+      "  accuracy: 0.8750\n",
+      "  total_samples: 64\n",
+      "  correct_predictions: 56\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Evaluating original model...\")\n",
+    "original_metrics = evaluate_model_quality(\n",
+    "    model,\n",
+    "    tokenizer,\n",
+    "    dataset,\n",
+    "    max_samples=64,\n",
+    "    batch_size=32\n",
+    ")\n",
+    "\n",
+    "print(\"\\nOriginal Model Metrics:\")\n",
+    "for key, value in original_metrics.items():\n",
+    "    if isinstance(value, float):\n",
+    "        print(f\"  {key}: {value:.4f}\")\n",
+    "    else:\n",
+    "        print(f\"  {key}: {value}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43d23200-c716-4555-8ed2-e97b69d4a0e2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b8a2200-64de-49f8-ab54-7a5bfb38cc0a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0abe723e-3972-4674-b9f9-9081ba2d4c98",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d9182c9-0157-42fd-ac35-ff4bce29f5de",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "3705682a-5118-40f9-a839-383f15e539c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluating quantized model...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Evaluating: 100%|█████████████████████████████████████████████████████| 32/32 [04:05<00:00,  7.66s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Quantized Model Metrics:\n",
+      "  accuracy: 0.8950\n",
+      "  total_samples: 1000\n",
+      "  correct_predictions: 895\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Evaluating quantized model...\")\n",
+    "quantized_metrics = evaluate_model_quality(\n",
+    "    quantized_model,\n",
+    "    tokenizer,\n",
+    "    dataset,\n",
+    "    max_samples=1000,\n",
+    "    batch_size=32\n",
+    ")\n",
+    "\n",
+    "print(\"\\nQuantized Model Metrics:\")\n",
+    "for key, value in quantized_metrics.items():\n",
+    "    if isinstance(value, float):\n",
+    "        print(f\"  {key}: {value:.4f}\")\n",
+    "    else:\n",
+    "        print(f\"  {key}: {value}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "614fc8d6-e8d7-4ecd-818f-e3f99675131b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Accuracy drop: 1.30%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Compare accuracy\n",
+    "accuracy_drop = (original_metrics['accuracy'] - quantized_metrics['accuracy']) * 100\n",
+    "print(f\"\\nAccuracy drop: {accuracy_drop:.2f}%\")\n",
+    "\n",
+    "if 'f1_score' in original_metrics:\n",
+    "    f1_drop = (original_metrics['f1_score'] - quantized_metrics['f1_score']) * 100\n",
+    "    print(f\"F1 Score drop: {f1_drop:.2f}%\")"
    ]
   },
   {
@@ -179,18 +522,191 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "28724b58",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Measuring inference time for original model...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Measuring inference time: 100%|█████████████████████████████████████| 100/100 [00:04<00:00, 20.12it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "⚡ Original Model Inference Time:\n",
+      "  Mean: 15.93 ms\n",
+      "  Std:  0.54 ms\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code"
+    "print(\"Measuring inference time for original model...\")\n",
+    "original_time = measure_inference_time(\n",
+    "    model,\n",
+    "    tokenizer,\n",
+    "    texts,\n",
+    "    num_runs=100\n",
+    ")\n",
+    "\n",
+    "print(\"\\n⚡ Original Model Inference Time:\")\n",
+    "print(f\"  Mean: {original_time['mean_time']*1000:.2f} ms\")\n",
+    "print(f\"  Std:  {original_time['std_time']*1000:.2f} ms\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "5ee46a79-f099-4a42-a334-1e292179e05d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Measuring inference time for quantized model...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Measuring inference time: 100%|█████████████████████████████████████| 100/100 [00:02<00:00, 34.41it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "⚡ Quantized Model Inference Time:\n",
+      "  Mean: 9.24 ms\n",
+      "  Std:  2.47 ms\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Measuring inference time for quantized model...\")\n",
+    "quantized_time = measure_inference_time(\n",
+    "    quantized_model,\n",
+    "    tokenizer,\n",
+    "    texts,\n",
+    "    num_runs=100\n",
+    ")\n",
+    "\n",
+    "print(\"\\n⚡ Quantized Model Inference Time:\")\n",
+    "print(f\"  Mean: {quantized_time['mean_time']*1000:.2f} ms\")\n",
+    "print(f\"  Std:  {quantized_time['std_time']*1000:.2f} ms\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "a1fd1b1a-acf7-47e9-bf87-901246999c44",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "🚀 Speedup: 1.72x\n"
+     ]
+    }
+   ],
+   "source": [
+    "speedup = original_time['mean_time'] / quantized_time['mean_time']\n",
+    "print(f\"\\n🚀 Speedup: {speedup:.2f}x\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f775132-5b07-42ad-b6be-29a1642f6524",
+   "metadata": {},
+   "source": [
+    "### Проверка работы квантованной модели"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "22dda480-2b74-42b7-a9d1-87c1f08715f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Device set to use cpu\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Text: I loved this movie, it was fantastic!\n",
+      "Prediction: [{'label': 'POSITIVE', 'score': 0.9998642206192017}]\n",
+      "\n",
+      "Text: This was a terrible waste of time.\n",
+      "Prediction: [{'label': 'NEGATIVE', 'score': 0.9997791647911072}]\n",
+      "\n",
+      "Text: Not bad, but could be better.\n",
+      "Prediction: [{'label': 'NEGATIVE', 'score': 0.9467726945877075}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "clf = pipeline(\"sentiment-analysis\", model=quantized_model, tokenizer=tokenizer)\n",
+    "\n",
+    "for t in texts:\n",
+    "    print(f\"\\nText: {t}\")\n",
+    "    print(\"Prediction:\", clf(t))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2ba5820-325c-4bb2-8687-07c7fc1debe6",
+   "metadata": {},
+   "source": [
+    "### Выводы\n",
+    "\n",
+    "После применения post-training dynamic quantization:\n",
+    "\n",
+    "1. **Размер модели** уменьшился примерно в 2 раза (с ~268 MB до ~138 MB)\n",
+    "2. **Accurcay**: Потеря точности 1.5%\n",
+    "3. **Ускорение** инференса на CPU - 1.72x\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0234b86-3b2b-4772-ae0c-a6fda0f2e285",
+   "id": "0948ce97-1f95-447d-891d-2b22e5882f31",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -198,9 +714,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.13",
+   "display_name": "tmp",
    "language": "python",
-   "name": "py313"
+   "name": "tmp"
   },
   "language_info": {
    "codemirror_mode": {
@@ -212,7 +728,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
