--- a/WEEK2/HT2/HT2.ipynb
+++ b/WEEK2/HT2/HT2.ipynb
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "id": "f8406fcc-8424-4321-8b5c-5f79fd66db92",
    "metadata": {},
    "outputs": [
@@ -201,18 +201,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Evaluating: 100%|█████████████████████████████████████████████████████| 32/32 [05:03<00:00,  9.47s/it]"
+      "Evaluating: 100%|█████████████████████████████████████████████████████| 32/32 [05:16<00:00,  9.90s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[0 1]\n",
       "\n",
       "Original Model Metrics:\n",
-      "  accuracy: 0.9080\n",
+      "  accuracy: 0.8810\n",
       "  total_samples: 1000\n",
-      "  correct_predictions: 908\n"
+      "  correct_predictions: 881\n",
+      "  precision: 0.8917\n",
+      "  recall: 0.8607\n",
+      "  f1_score: 0.8759\n"
      ]
     },
     {
@@ -243,196 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "e0af9d83-a14e-444d-bddf-0d58e6f3915c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "def evaluate_model_quality(\n",
-    "    model: nn.Module,\n",
-    "    tokenizer,\n",
-    "    validation_dataset,\n",
-    "    max_samples: int = 1000,\n",
-    "    batch_size: int = 32,\n",
-    "    max_length: int = 512\n",
-    ") -> Dict:\n",
-    "    \"\"\"\n",
-    "    Args:\n",
-    "        model: Model to evaluate\n",
-    "        tokenizer: Tokenizer for the model\n",
-    "        validation_dataset: Dataset with 'text' and 'label' fields\n",
-    "        max_samples: Maximum number of samples to evaluate\n",
-    "        batch_size: Batch size for evaluation\n",
-    "        max_length: Maximum sequence length\n",
-    "    \n",
-    "    Returns:\n",
-    "        Dictionary with accuracy and other metrics\n",
-    "    \"\"\"\n",
-    "    model.eval()\n",
-    "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "    model.to(device)\n",
-    "    \n",
-    "    correct = 0\n",
-    "    total = 0\n",
-    "    all_predictions = []\n",
-    "    all_labels = []\n",
-    "    eval_samples = min(max_samples, len(validation_dataset))\n",
-    "    \n",
-    "    with torch.no_grad():\n",
-    "        for i in tqdm(range(0, eval_samples, batch_size), desc=\"Evaluating\"):\n",
-    "            batch_end = min(i + batch_size, eval_samples)\n",
-    "            batch = validation_dataset[i:batch_end]\n",
-    "            \n",
-    "            inputs = tokenizer(\n",
-    "                batch['text'],\n",
-    "                padding=True,\n",
-    "                truncation=True,\n",
-    "                max_length=max_length,\n",
-    "                return_tensors=\"pt\"\n",
-    "            )\n",
-    "            inputs = {k: v.to(device) for k, v in inputs.items()}\n",
-    "            labels = torch.tensor(batch['label']).to(device)\n",
-    "            \n",
-    "            outputs = model(**inputs)\n",
-    "            predictions = torch.argmax(outputs.logits, dim=-1)\n",
-    "            \n",
-    "            correct += (predictions == labels).sum().item()\n",
-    "            total += labels.size(0)\n",
-    "            \n",
-    "            all_predictions.extend(predictions.cpu().numpy())\n",
-    "            all_labels.extend(labels.cpu().numpy())\n",
-    "    \n",
-    "    accuracy = correct / total\n",
-    "    \n",
-    "    # Calculate additional metrics\n",
-    "    all_predictions = np.array(all_predictions)\n",
-    "    all_labels = np.array(all_labels)\n",
-    "\n",
-    "    print(np.unique(all_labels))\n",
-    "    \n",
-    "    # For binary classification\n",
-    "    if len(np.unique(all_labels)) == 2:\n",
-    "        true_positives = np.sum((all_predictions == 1) & (all_labels == 1))\n",
-    "        false_positives = np.sum((all_predictions == 1) & (all_labels == 0))\n",
-    "        false_negatives = np.sum((all_predictions == 0) & (all_labels == 1))\n",
-    "        \n",
-    "        precision = true_positives / (true_positives + false_positives) if (true_positives + false_positives) > 0 else 0\n",
-    "        recall = true_positives / (true_positives + false_negatives) if (true_positives + false_negatives) > 0 else 0\n",
-    "        f1_score = 2 * (precision * recall) / (precision + recall) if (precision + recall) > 0 else 0\n",
-    "    else:\n",
-    "        precision = recall = f1_score = None\n",
-    "    \n",
-    "    metrics = {\n",
-    "        'accuracy': accuracy,\n",
-    "        'total_samples': total,\n",
-    "        'correct_predictions': correct\n",
-    "    }\n",
-    "    \n",
-    "    if precision is not None:\n",
-    "        metrics.update({\n",
-    "            'precision': precision,\n",
-    "            'recall': recall,\n",
-    "            'f1_score': f1_score\n",
-    "        })\n",
-    "    \n",
-    "    return metrics\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "cc78efa5-71c0-4a40-8576-85331c36562d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Evaluating original model...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Evaluating: 100%|███████████████████████████████████████████████████████| 2/2 [00:11<00:00,  5.71s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0]\n",
-      "\n",
-      "Original Model Metrics:\n",
-      "  accuracy: 0.8750\n",
-      "  total_samples: 64\n",
-      "  correct_predictions: 56\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Evaluating original model...\")\n",
-    "original_metrics = evaluate_model_quality(\n",
-    "    model,\n",
-    "    tokenizer,\n",
-    "    dataset,\n",
-    "    max_samples=64,\n",
-    "    batch_size=32\n",
-    ")\n",
-    "\n",
-    "print(\"\\nOriginal Model Metrics:\")\n",
-    "for key, value in original_metrics.items():\n",
-    "    if isinstance(value, float):\n",
-    "        print(f\"  {key}: {value:.4f}\")\n",
-    "    else:\n",
-    "        print(f\"  {key}: {value}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "43d23200-c716-4555-8ed2-e97b69d4a0e2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1b8a2200-64de-49f8-ab54-7a5bfb38cc0a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0abe723e-3972-4674-b9f9-9081ba2d4c98",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8d9182c9-0157-42fd-ac35-ff4bce29f5de",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "id": "3705682a-5118-40f9-a839-383f15e539c6",
    "metadata": {},
    "outputs": [
@@ -447,18 +262,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Evaluating: 100%|█████████████████████████████████████████████████████| 32/32 [04:05<00:00,  7.66s/it]"
+      "Evaluating: 100%|█████████████████████████████████████████████████████| 32/32 [03:31<00:00,  6.61s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[0 1]\n",
       "\n",
       "Quantized Model Metrics:\n",
-      "  accuracy: 0.8950\n",
+      "  accuracy: 0.8620\n",
       "  total_samples: 1000\n",
-      "  correct_predictions: 895\n"
+      "  correct_predictions: 862\n",
+      "  precision: 0.8692\n",
+      "  recall: 0.8443\n",
+      "  f1_score: 0.8565\n"
      ]
     },
     {
@@ -489,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "id": "614fc8d6-e8d7-4ecd-818f-e3f99675131b",
    "metadata": {},
    "outputs": [
@@ -498,12 +317,12 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Accuracy drop: 1.30%\n"
+      "Accuracy drop: 1.90%\n",
+      "F1 Score drop: 1.94%\n"
      ]
     }
    ],
    "source": [
-    "# Compare accuracy\n",
     "accuracy_drop = (original_metrics['accuracy'] - quantized_metrics['accuracy']) * 100\n",
     "print(f\"\\nAccuracy drop: {accuracy_drop:.2f}%\")\n",
     "\n",
@@ -699,14 +518,14 @@
     "После применения post-training dynamic quantization:\n",
     "\n",
     "1. **Размер модели** уменьшился примерно в 2 раза (с ~268 MB до ~138 MB)\n",
-    "2. **Accurcay**: Потеря точности 1.5%\n",
+    "2. **Accurcay**: Потеря точности 1.9%\n",
     "3. **Ускорение** инференса на CPU - 1.72x\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0948ce97-1f95-447d-891d-2b22e5882f31",
+   "id": "c9491071-be9a-4dd5-848a-af630e3976b1",
    "metadata": {},
    "outputs": [],
    "source": []
